# Sim2Real_autonomous_vehicle

./: README.md  docker.def  environment.yml  human_baseline.py  requirements.txt
evaluation_ws/src/complete_image_pipeline/: CMakeLists.txt  README.md  package.xml
evaluation_ws/src/complete_image_pipeline/src/: calibrate_extrinsics  display_segmaps  single_image_pipeline  validate_calibration
evaluation_ws/src/display_renderers/: CMakeLists.txt  package.xml
evaluation_ws/src/display_renderers/launch/: health_renderer_node.launch  networking_renderer_node.launch
evaluation_ws/src/display_renderers/src/: health_renderer_node.py  networking_renderer_node.py
evaluation_ws/src/duckietown_msgs/: CMakeLists.txt
evaluation_ws/src/duckietown_msgs/msg/: AprilTagDetection.msg  AprilTagDetectionArray.msg  ButtonEvent.msg  CoordinationSignal.msg  DiagnosticsCodeProfiling.msg  DiagnosticsRosLinkArray.msg  DiagnosticsRosNode.msg  DiagnosticsRosParameterArray.msg  DiagnosticsRosProfilingUnit.msg  DiagnosticsRosTopicArray.msg  DisplayFragment.msg  DroneControl.msg  FSMState.msg  IntersectionPoseImg.msg  LEDDetection.msg  LanePose.msg  LightSensor.msg  NodeParameter.msg  ParamTuner.msg  SignalsDetection.msg  SignalsDetectionETHZ17.msg  TagInfo.msg  TurnIDandType.msg  WheelsCmdDBV2Stamped.msg
evaluation_ws/src/duckietown_msgs/srv/: ChangePattern.srv  IMUstatus.srv  LFstatus.srv  SetVariable.srv  ToFstatus.srv
evaluation_ws/src/explicit_coordinator/: .autogenerated.md  CMakeLists.txt  README.md  package.xml
evaluation_ws/src/explicit_coordinator/launch/: coordination_ETHZ17.launch  fake_coordinator_node.launch  fake_duckiebot_node.launch  fake_duckiebot_signals.launch  fake_intersection_detection.launch  general.launch  simple_coordinator_fake_duckiebot_gui_stop.launch  simple_coordinator_fake_duckiebot_gui_tl.launch  simple_coordinator_node.launch
evaluation_ws/src/explicit_coordinator/src/: _CoordinationSignalETHZ17.py  coordinator_node.py  fake_coordinator_node.py  fake_duckiebot.py  fake_intersection_detection.py  simple_coordinator_node.py
evaluation_ws/src/ground_projection/: CMakeLists.txt  package.xml
evaluation_ws/src/ground_projection/launch/: ground_projection_node.launch
evaluation_ws/src/ground_projection/src/: ground_projection_node.py
evaluation_ws/src/image_processing/: package.xml
evaluation_ws/src/image_processing/launch/: image_rectification.launch  intrinsic_calibration.launch
evaluation_ws/src/image_processing/src/: decoder_node.py  rectifier_node.py
evaluation_ws/src/indefinite_navigation/: .autogenerated.md  CMakeLists.txt  README.md  package.xml
evaluation_ws/src/indefinite_navigation/launch/: servo_detector.launch  simple_servo.launch
evaluation_ws/src/indefinite_navigation/src/: count_turns.py  detector.py  simple_servo.py  test_straight_line.py
evaluation_ws/src/indefinite_navigation/tests/: calibrate_kinematics.test  calibrate_turn.test  test_kinematics.py  test_turn.py
evaluation_ws/src/led_joy_mapper/: .autogenerated.md  CMakeLists.txt  README.md  package.xml
evaluation_ws/src/led_joy_mapper/launch/: led_joy_mapper_node.launch  led_joy_mapper_node_test.launch  led_joy_with_led_emitter.launch
evaluation_ws/src/led_joy_mapper/src/: led_joy_mapper_node.py  led_joy_mapper_node_old.py
evaluation_ws/src/led_pattern_switch/: CMakeLists.txt  package.xml
evaluation_ws/src/led_pattern_switch/launch/: led_pattern_switch_node.launch
evaluation_ws/src/led_pattern_switch/src/: led_pattern_switch_node.py
evaluation_ws/src/navigation/: .autogenerated.md  CMakeLists.txt  README.md  package.xml  plugin.xml  setup.py
evaluation_ws/src/navigation/launch/: actions_dispatcher_node.launch  graph_search_server.launch  graph_search_server_node.launch  random_april_tag_turns_node.launch  sr_turns_node.launch
evaluation_ws/src/navigation/src/: actions_dispatcher_node.py  graph_search_client_node.py  graph_search_server_node.py  random_april_tag_turns_node.py  rqt_navigation  sr_turns_node.py
evaluation_ws/src/navigation/srv/: GraphSearch.srv
evaluation_ws/src/ros_http_api/: CMakeLists.txt  package.xml  setup.py
evaluation_ws/src/ros_http_api/launch/: ros_http_api_node.launch
evaluation_ws/src/ros_http_api/src/: ros_http_api_node.py
evaluation_ws/src/sensor_suite/: CMakeLists.txt  README.md  package.xml  setup.py
evaluation_ws/src/sensor_suite/launch/: all_sensors.launch  encoder_node.launch  imu_calibration.launch  imu_node.launch  line_following_calibration.launch  line_following_node.launch  tof_calibration.launch  tof_node.launch
evaluation_ws/src/sensor_suite/src/: encoder_node.py  imu_calibration_node.py  imu_node.py  line_following_calibration_node.py  line_following_node.py  tof_calibration_node.py  tof_node.py
evaluation_ws/src/tof_driver_2/: CMakeLists.txt  package.xml
evaluation_ws/src/tof_driver_2/launch/: tof_node.launch
evaluation_ws/src/tof_driver_2/src/: tof_node.py
evaluation_ws/src/unicorn_intersection/: .autogenerated.md  CMakeLists.txt  README.md  package.xml  setup.py
evaluation_ws/src/unicorn_intersection/launch/: unicorn_intersection_node.launch
evaluation_ws/src/unicorn_intersection/src/: unicorn_intersection_node.py
evaluation_ws/src/visualization_tools/: package.xml  setup.py
evaluation_ws/src/visualization_tools/launch/: lane_pose_visualizer_node.launch
evaluation_ws/src/visualization_tools/src/: lane_pose_visualizer_node.py
training_ws/src/duckiebot_detection/: CMakeLists.txt  README.md  package.xml
training_ws/src/duckiebot_detection/launch/: duckiebot_detection_node.launch
training_ws/src/duckiebot_detection/src/: duckiebot_detection_node.py
training_ws/src/vehicle_detection/: CMakeLists.txt  package.xml
training_ws/src/vehicle_detection/launch/: vehicle_detection_node.launch
training_ws/src/vehicle_detection/src/: vehicle_detection_node.py  vehicle_filter_node.py
training_ws/src/visualization_tools/: CMakeLists.txt  README.md
training_ws/src/visualization_tools/launch/: lane_pose_visualizer_node.launch  line_segment_visualizer_node.launch
(+2291 files in other folders)
