<?xml version="1.0"?>
<package>
  <name>complete_image_pipeline</name>
  <version>1.0.0</version>
  <description>
This package contains functions that allow to call the entire message pipeline programmatically,
as a Python function, without having to instantiate any ROS node.

This is useful for regression tests, and quick tests with new logs.
</description>

  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend> 
</package>
