<?xml version="1.0"?>
<package>
    <name>display_renderers</name>
    <version>1.0.0</version>
    <description>Display renderers</description>

    <author email="afdaniele@ttic.edu">Andrea F. Daniele</author>
    <maintainer email="afdaniele@ttic.edu">Andrea F. Daniele</maintainer>

    <license>GPLv3</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rospy</build_depend>
    <build_depend>duckietown_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>std_msgs</build_depend>

    <run_depend>rospy</run_depend>
    <run_depend>duckietown_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>std_msgs</run_depend>
</package>
