<?xml version="1.0"?>
<package>
  <name>explicit_coordinator</name>
  <version>0.0.1</version>
  <description>The simple vehicle coordination package</description>

  <author email="mcap@mit.edu">Michal Cap</author>
  <license>GPLv3</license>

  <maintainer email="mack@duckietown.org">Mack</maintainer>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>


</package>
