<?xml version="1.0"?>
<package>
  <name>indefinite_navigation</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `indefinite_navigation` in `package.xml`.</description>


  <maintainer email="paull@mit.edu">Liam Paull</maintainer>

  <license>GPLv3</license>


  <test_depend>unittest</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>

 
</package>
