<?xml version="1.0"?>
<package>
  <name>led_pattern_switch</name>
  <version>1.0.0</version>
  <description>Does something related to changing the LED patters based on FSM state</description>

  <maintainer email='acensi@idsc.mavt.ethz.ch'>Andrea Censi</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>

</package>
