<?xml version="1.0"?>
<package>
  <name>navigation</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `navigation` in `package.xml`.</description>

  <author email="franzoni@mit.edu">igor</author>
  <maintainer email="mack@duckietown.org">Mack</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rqt_gui_py</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <rqt_gui plugin="${prefix}/plugin.xml"/>
  </export>
</package>
