<?xml version="1.0"?>
<package format="2">
  <name>sensor_suite</name>
  <version>1.0.0</version>
  <description>Interface for reading sensors on DBV2 and publishing ROS topics</description>

   <author email="scottti@student.ethz.ch">Timothy Scott</author>
  
  <maintainer email="scottti@student.ethz.ch">Timothy Scott</maintainer>
  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>duckietown_msgs</depend>
  <depend>rospy</depend>
  <depend>adafruit_drivers</depend>

</package>
