<?xml version="1.0"?>
<package>
  <name>unicorn_intersection</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `unicorn_intersection` in `package.xml`.</description>

  <maintainer email="jkindle@ethz.ch">Julien Kindle</maintainer>
  <maintainer email="gibernas@ethz.ch">Gianmarco Bernasconi</maintainer>
  <maintainer email="webeben@ethz.ch">Ben Weber</maintainer>


  <license>GPLv3</license>



  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>



</package>
