<?xml version="1.0"?>
<package>
  <name>visualization_tools</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `visualization_tools` in `package.xml`.</description>

  <author email="syliu@mit.edu">Shih-Yuan Liu</author>
  <maintainer email='mack@duckietown.org'>Mack</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <run_depend>duckietown_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
