<?xml version="1.0"?>
<package>
  <name>duckiebot_detection</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `duckiebot_detection` in `package.xml`.</description>

  <maintainer email="soroush.saryazdi@gmail.com">Soroush Saryazdi</maintainer>
  <author email="soroush.saryazdi@gmail.com">Soroush Saryazdi</author>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>



</package>
