<?xml version="1.0"?>
<package>
  <name>vehicle_detection</name>
  <version>1.0.0</version>
  <description>TODO: Add a description of package `vehicle_detection` in `package.xml`.</description>

  <maintainer email="mack@duckietown.org">Mack</maintainer>
  <author email="atacchet@todo.todo">Andrea Tacchetti</author>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>duckietown_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>duckietown_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>



</package>
